--- a/profile.html
+++ b/profile.html
@@ -99,12 +99,19 @@
                             <button class="btn btn-primary" id="upload" style="margin-top: 10px;">Upload profile Image</button>
                             <div>
                                 <p id="progress"></p>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" id="progressBar"></div>
+                                </div>
+
                             </div>
 
                             <input type="file" id="coverImage">
                             <button class="btn btn-primary" id="uploadCover" style="margin-top: 10px;">Upload Cover Image</button>
                             <div>
                                 <p id="progressCover"></p>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" id="progressBar1"></div>
+                                </div>
                             </div>
                         </div>
                         <label for="">Edit Name</label>
